--- a/PositionIn/PositionIn.GiveBloodDetailsViewController.xib
+++ b/PositionIn/PositionIn.GiveBloodDetailsViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -15,6 +15,7 @@
                 <outlet property="nameLabel" destination="yLy-Hw-9TS" id="sKZ-c4-5nr"/>
                 <outlet property="priceLabel" destination="XAH-op-Os7" id="147-ie-nLm"/>
                 <outlet property="productImageView" destination="egj-Kc-81c" id="T1c-ex-31h"/>
+                <outlet property="productPinDistanceImageView" destination="hui-HX-Wtg" id="IGY-Th-DAI"/>
                 <outlet property="view" destination="wUM-RT-rmq" id="89F-ef-NGF"/>
             </connections>
         </placeholder>
