--- a/PositionIn/Classes/Application Layer/ViewControllers/SegmentControlContainer/SegmentedControlContainerViewController.xib
+++ b/PositionIn/Classes/Application Layer/ViewControllers/SegmentControlContainer/SegmentedControlContainerViewController.xib
@@ -5,10 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MembershipPlansContainerViewController" customModule="PositionIn" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SegmentedControlContainerViewController">
             <connections>
-                <outlet property="containerView" destination="rVI-sj-cJ2" id="UFR-ld-cM2"/>
-                <outlet property="segmentControl" destination="42C-dL-KcK" id="obT-YR-V6J"/>
+                <outlet property="containerView" destination="rVI-sj-cJ2" id="A4I-Qb-CgV"/>
+                <outlet property="segmentedControl" destination="42C-dL-KcK" id="JEP-O2-M0F"/>
+                <outlet property="view" destination="iN0-l3-epB" id="KDB-3C-2Eo"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,7 +24,7 @@
                         <segment title="Corporate"/>
                     </segments>
                     <connections>
-                        <action selector="segmentControlValueChanged:" destination="-1" eventType="valueChanged" id="Y4C-1L-PkC"/>
+                        <action selector="segmentControlValueChanged:" destination="-1" eventType="valueChanged" id="WTR-OE-1e7"/>
                     </connections>
                 </segmentedControl>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVI-sj-cJ2">
