--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/PlanDetails/BenefitTableViewCell/MembershipPlanDetailsBenefitTableViewCell.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/PlanDetails/BenefitTableViewCell/MembershipPlanDetailsBenefitTableViewCell.xib
@@ -6,9 +6,9 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MembershipPlanDetailsBenefitTableViewCell" customModule="PositionIn" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PositionIn.MembershipBenefitCell" id="7oc-Ko-FSj" customClass="MembershipBenefitCell" customModule="PositionIn" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="7oc-Ko-FSj" customClass="MembershipPlanDetailsBenefitTableViewCell" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="347" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7oc-Ko-FSj" id="Mcr-iv-s0e">
