--- a/PositionIn/Donate/PositionIn.CardTableViewCell.xib
+++ b/PositionIn/Donate/PositionIn.CardTableViewCell.xib
@@ -23,13 +23,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qm-10-Nc2">
-                        <rect key="frame" x="88" y="8" width="224" height="29"/>
+                        <rect key="frame" x="88" y="8" width="224" height="21"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCu-Ul-dvc">
-                        <rect key="frame" x="88" y="41" width="224" height="31"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCu-Ul-dvc">
+                        <rect key="frame" x="88" y="32" width="224" height="40"/>
                         <string key="text">Enter payment details and
 compleate you purchase</string>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -47,10 +47,12 @@ compleate you purchase</string>
                     <constraint firstItem="OCu-Ul-dvc" firstAttribute="top" secondItem="3qm-10-Nc2" secondAttribute="bottom" constant="4" id="dhZ-8s-eW4"/>
                     <constraint firstItem="Wpw-6d-faA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="vmt-Dy-pvQ"/>
                     <constraint firstItem="3qm-10-Nc2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="wZV-1z-4GB"/>
+                    <constraint firstAttribute="bottom" secondItem="Wpw-6d-faA" secondAttribute="bottom" constant="19" id="xj1-ER-Gxq"/>
                 </constraints>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
+                <outlet property="cardDescriptionLabel" destination="OCu-Ul-dvc" id="D3Y-np-aYN"/>
                 <outlet property="cardIconImageView" destination="Wpw-6d-faA" id="KVc-9Z-l0s"/>
                 <outlet property="cardNameLabel" destination="3qm-10-Nc2" id="9yg-35-chM"/>
             </connections>
