--- a/PositionIn/Onboarding/Onboarding.storyboard
+++ b/PositionIn/Onboarding/Onboarding.storyboard
@@ -210,8 +210,8 @@ heading your way</string>
                     </view>
                     <connections>
                         <segue destination="ppY-Jd-qZV" kind="show" identifier="ShowBraintree" id="A4U-as-cuu"/>
-                        <segue destination="RUw-L3-ejb" kind="show" identifier="PaymentCompleted" id="83A-no-RMr"/>
                         <segue destination="R6s-Cc-jvz" kind="show" identifier="ShowMpesa" id="QiO-zr-IMb"/>
+                        <segue destination="Hhh-7O-KOU" kind="show" identifier="PaymentCompleted" id="ftg-6b-ecK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tim-4q-COV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -271,26 +271,6 @@ heading your way</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xNL-8P-pcc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3074" y="-3332"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="76T-E3-VPP">
-            <objects>
-                <navigationController id="RUw-L3-ejb" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Dzg-rz-Rkk">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Hhh-7O-KOU" kind="relationship" relationship="rootViewController" id="6xu-S8-529"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W8L-nt-Zzd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4381" y="-3297"/>
         </scene>
         <!--Donate Notification View Controller-->
         <scene sceneID="CSk-Sk-ywM">
@@ -492,10 +472,10 @@ M-Pesa PIN number</string>
                         <viewControllerLayoutGuide type="bottom" id="19e-bj-Dos"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="KoR-CU-n81">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u84-By-2P1">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u84-By-2P1">
                                 <rect key="frame" x="20" y="142" width="560" height="105"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="krfc" translatesAutoresizingMaskIntoConstraints="NO" id="O83-gE-xeB">
@@ -531,7 +511,7 @@ M-Pesa PIN number</string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="KSH 1,000.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfW-7B-ksm">
-                                        <rect key="frame" x="80" y="75" width="471" height="25"/>
+                                        <rect key="frame" x="79" y="75" width="471" height="25"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -572,13 +552,13 @@ M-Pesa PIN number</string>
                                     </mask>
                                 </variation>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXr-0N-K8g">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Payment Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXr-0N-K8g">
                                 <rect key="frame" x="20" y="100" width="560" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.396078431372549" green="0.69803921568627447" blue="0.019607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success_icon" translatesAutoresizingMaskIntoConstraints="NO" id="b0k-kc-19s">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="success_icon" translatesAutoresizingMaskIntoConstraints="NO" id="b0k-kc-19s">
                                 <rect key="frame" x="276" y="20" width="48" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="HkD-Go-A4e"/>
@@ -608,10 +588,14 @@ M-Pesa PIN number</string>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="projectImageView" destination="O83-gE-xeB" id="DyM-7k-5ZS"/>
+                        <outlet property="projectNameLabel" destination="vGb-1U-6Wj" id="4cF-PD-M90"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q91-P4-FG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5077" y="-2590"/>
+            <point key="canvasLocation" x="4303" y="-3294"/>
         </scene>
     </scenes>
     <resources>
