--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -1436,9 +1436,9 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="9u4-qy-iVR"/>
-        <segue reference="IN2-9C-ZzA"/>
+        <segue reference="UGm-BP-OPQ"/>
+        <segue reference="X7t-wp-vZe"/>
         <segue reference="w3L-Oe-bv8"/>
-        <segue reference="6ZU-Ck-PGM"/>
-        <segue reference="WXU-OU-n2l"/>
+        <segue reference="IN2-9C-ZzA"/>
     </inferredMetricsTieBreakers>
 </document>
